# AI-ML

./: FXPatternAnalyzer.py  README.md
LocalAIAgent/: README.md  main.py  vector.py
LocalAIAgentPdf/: README.MD  main.py  pyproject.toml  requirements.txt
LocalAIChatbotPdf/: README.md  app.py  pyproject.toml  requirements.txt
OpenAiLangSmith/: README.md  main.py  pyproject.toml  requirememnts.txt
