[project]
name = "localaiagentpdf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.36.0",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "llama-index>=0.10.50",
    "llama-index-core>=0.14.10",
    "llama-index-embeddings-huggingface>=0.1.10",
    "llama-index-llms-huggingface>=0.6.1",
    "llama-index-llms-openai>=0.1.20",
    "openai>=1.30.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.0.1",
    "sentence-transformers>=2.6.1",
    "torch>=2.0.0",
    "transformers>=4.40.0",
]
